--- a/pages/games.html
+++ b/pages/games.html
@@ -47,12 +47,14 @@
             </div>
         </div>
 
-        <div id="liked-section">
+        <div id="recent-section" style="margin-bottom: 2rem; display: none;">
             <div class="section-header">
-                <i class="fa-solid fa-heart"></i> Liked Games
+                <i class="fa-solid fa-clock-rotate-left"></i> Recent Games
             </div>
-            <div class="game-grid" id="liked-grid"></div>
+            <div class="game-grid" id="recent-grid"></div>
         </div>
+
+
 
         <div class="section-header">
             <i class="fa-solid fa-gamepad"></i> <span id="game-count">All Games</span>
