--- a/pages/player.html
+++ b/pages/player.html
@@ -39,10 +39,7 @@
                     </div>
 
                     <label class="player-proxy-toggle" title="Toggle Proxy">
-                        <div class="switch">
-                            <input type="checkbox" id="proxy-toggle">
-                            <span class="slider"></span>
-                        </div>
+                        <div class="toggle" id="proxy-toggle"></div>
                         <span class="player-control-label">Proxy</span>
                     </label>
                 </div>
@@ -80,7 +77,6 @@
     <script src="../scripts/notifications.js"></script>
     <script src="../scripts/quotes.js"></script>
     <script src="../components/footer.js"></script>
-
     <script src="../scripts/player.js"></script>
 </body>
 
