--- a/index2.html
+++ b/index2.html
@@ -179,6 +179,26 @@
 
 
 
+        .offline-banner {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            padding: var(--space-sm) var(--space-md);
+            background: var(--warning);
+            color: var(--bg);
+            text-align: center;
+            font-size: 0.875rem;
+            font-weight: 500;
+            z-index: var(--z-toast);
+            transform: translateY(-100%);
+            transition: transform var(--transition-normal);
+        }
+
+        .offline-banner.show {
+            transform: translateY(0);
+        }
+
         @media (max-width: 640px) {
             .site-title {
                 font-size: 1.75rem;
@@ -192,18 +212,18 @@
 
         }
     </style>
-    <script src="config.js"></script>
-    <script src="scripts/settings.js"></script>
-    <script src="scripts/background.js"></script>
-    <script src="scripts/cloaking.js"></script>
-    <script src="scripts/quotes.js"></script>
-    <script src="scripts/notifications.js"></script>
-    <script src="scripts/rotation.js"></script>
-    <script src="scripts/featured.js"></script>
-    <script src="components/UGSfiles.js"></script>
-    <script src="scripts/gloader.js"></script>
-    <script src="scripts/search.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js"></script>
+    <script src="config.js" defer></script>
+    <script src="scripts/settings.js" defer></script>
+    <script src="scripts/background.js" defer></script>
+    <script src="scripts/cloaking.js" defer></script>
+    <script src="scripts/quotes.js" defer></script>
+    <script src="scripts/notifications.js" defer></script>
+    <script src="scripts/rotation.js" defer></script>
+    <script src="scripts/featured.js" defer></script>
+    <script src="components/UGSfiles.js" defer></script>
+    <script src="scripts/gloader.js" defer></script>
+    <script src="scripts/search.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js" defer></script>
     <script type="module">
         import * as BareMux from "https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs";
         window.BareMux = BareMux;
@@ -248,7 +268,8 @@
 
 
         // Featured games
-        (async () => {
+        window.addEventListener('DOMContentLoaded', async () => {
+            if (!window.FeaturedGames) return;
             await window.FeaturedGames.load();
             const featuredGames = window.FeaturedGames.games || [];
 
@@ -269,7 +290,7 @@
                 fragment.appendChild(card);
             });
             grid.appendChild(fragment);
-        })();
+        });
 
 
 
@@ -283,8 +304,8 @@
         });
     </script>
 
-    <script src="components/footer.js"></script>
-    <script src="scripts/init.js"></script>
+    <script src="components/footer.js" defer></script>
+    <script src="scripts/init.js" defer></script>
 </body>
 
 </html>
