--- a/pages/movies.html
+++ b/pages/movies.html
@@ -53,6 +53,15 @@
             </div>
         </div>
 
+        <div id="continue-watching-section"
+            style="display: none; margin-bottom: 2rem; max-width: 1200px; margin-inline: auto;">
+            <div class="section-header"
+                style="display: flex; align-items: center; gap: 8px; margin-bottom: 15px; color: var(--text-muted); font-size: 0.9rem; text-transform: uppercase; font-weight: 600; letter-spacing: 0.05em; padding-left: 20px;">
+                <i class="fa-solid fa-clock-rotate-left"></i> Continue Watching
+            </div>
+            <div class="media-grid" id="continue-watching-grid" style="padding-top: 0;"></div>
+        </div>
+
         <div class="media-grid" id="media-grid">
             <div class="media-card">
                 <div class="skeleton" style="width:100%;height:100%;"></div>
