--- a/staticsjv2/NT.html
+++ b/staticsjv2/NT.html
@@ -12,18 +12,9 @@
   <script src="../scripts/quotes.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs" type="module"></script>
   <script type="module">
-    import { BareMuxConnection } from "https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs";
-
-    if (!window.BareMuxConnection) {
-      window.BareMuxConnection = BareMuxConnection;
-      // Init connection for background proxying
-      (async () => {
-        const connection = new BareMuxConnection("./bareworker.js");
-        const wispUrl = (window.SITE_CONFIG && window.SITE_CONFIG.defaultWisp) || "wss://glseries.net/wisp/";
-        await connection.setTransport("https://cdn.jsdelivr.net/npm/@mercuryworkshop/epoxy-transport@2.1.28/dist/index.mjs", [{ wisp: wispUrl }]);
-        console.log("NT.html: Proxy connection initialized for backgrounds.");
-      })();
-    }
+    // NT.html only needs to know about BareMux for potential sub-resources, 
+    // but improper re-initialization can break the global transport.
+    // We rely on the Service Worker and main thread to handle transport.
   </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
