--- a/staticsjv2/embed.html
+++ b/staticsjv2/embed.html
@@ -170,8 +170,9 @@
     <div id="iframe-container"></div>
     <script>
         // Get config from config.js (already loaded in head)
-        const DEFAULT_WISP = window.SITE_CONFIG?.defaultWisp || "wss://glseries.net/wisp/";
-        const WISP_SERVERS = window.SITE_CONFIG?.wispServers || [];
+        // Note: DEFAULT_WISP and WISP_SERVERS are already defined in script.js which is loaded dynamically,
+        // but to be safe and avoid "already declared" errors, we will not redeclare them here with const/let.
+        // We will access them directly or use the config fallback.
 
         const ERRORS = { noUrl: { title: "No URL Provided", message: "You need to provide a URL to load.", hint: `Format: ${location.pathname}#https://example.com` }, invalidUrl: { title: "Invalid URL", message: "The URL you provided is not valid.", hint: `Try: ${location.pathname}#https://google.com` }, connectionFailed: { title: "Connection Failed", message: "Could not connect to the website.", hint: "The site may be down or blocking requests." }, proxyError: { title: "Proxy Error", message: "Failed to initialize the proxy connection.", hint: "Try refreshing or check your proxy settings." }, timeout: { title: "Loading Timeout", message: "The page is taking too long to load.", hint: "Click 'Skip' to view what has loaded, or 'Retry' to try again." }, blocked: { title: "Access Denied", message: "This website is blocking access.", hint: "Some sites don't allow being loaded through proxies." }, unknown: { title: "Error", message: "An unexpected error occurred.", hint: "Please try again." } };
         const els = { loading: document.getElementById('loading'), loadingTitle: document.getElementById('loading-title'), loadingUrl: document.getElementById('loading-url'), error: document.getElementById('error'), errorMessage: document.getElementById('error-message'), iframeContainer: document.getElementById('iframe-container'), skipBtn: document.getElementById('skip-btn'), retryBtn: document.getElementById('retry-btn') };
@@ -181,37 +182,51 @@
         function getErrorType(msg) { msg = (msg || '').toLowerCase(); if (msg.includes('fetch') || msg.includes('network')) return 'connectionFailed'; if (msg.includes('timeout')) return 'timeout'; if (msg.includes('blocked') || msg.includes('cors') || msg.includes('access')) return 'blocked'; if (msg.includes('websocket') || msg.includes('wisp')) return 'proxyError'; return 'unknown' }
 
         // Initialize scramjet directly in embed.html
-        let scramjetInstance = null;
-        let connectionInstance = null;
-
+        let scramjetInitPromise = null;
         async function initializeScramjet() {
             if (scramjetInstance) return scramjetInstance;
+            if (scramjetInitPromise) return scramjetInitPromise;
 
-            const basePath = location.pathname.replace(/[^/]*$/, '') + '/';
-            const { ScramjetController } = $scramjetLoadController();
+            scramjetInitPromise = (async () => {
+                const basePath = location.pathname.replace(/[^/]*$/, '') + '/';
+                const { ScramjetController } = $scramjetLoadController();
 
-            scramjetInstance = new ScramjetController({
-                prefix: basePath + "scramjet",
-                files: {
-                    wasm: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.wasm.wasm",
-                    all: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js",
-                    sync: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.sync.js"
-                }
-            });
+                const instance = new ScramjetController({
+                    prefix: basePath + "scramjet",
+                    files: {
+                        wasm: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.wasm",
+                        all: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js",
+                        sync: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.sync.js"
+                    }
+                });
 
-            await scramjetInstance.init();
-            return scramjetInstance;
+                await instance.init();
+                scramjetInstance = instance;
+                scramjetInitPromise = null;
+                return instance;
+            })();
+
+            return scramjetInitPromise;
         }
+
+        let connectionInitPromise = null;
+        let connectionInstance = null;
 
         async function initializeConnection() {
             if (connectionInstance) return connectionInstance;
+            if (connectionInitPromise) return connectionInitPromise;
 
-            const basePath = location.pathname.replace(/[^/]*$/, '') + '/';
-            const wispUrl = localStorage.getItem("proxServer") || DEFAULT_WISP;
+            connectionInitPromise = (async () => {
+                const basePath = location.pathname.replace(/[^/]*$/, '') + '/';
+                const wispUrl = localStorage.getItem("proxServer") || DEFAULT_WISP;
 
-            connectionInstance = new BareMux.BareMuxConnection(basePath + "bareworker.js");
-            await connectionInstance.setTransport("https://cdn.jsdelivr.net/npm/@mercuryworkshop/epoxy-transport@2.1.28/dist/index.mjs", [{ wisp: wispUrl }]);
-            return connectionInstance;
+                connectionInstance = new BareMux.BareMuxConnection(basePath + "bareworker.js");
+                await connectionInstance.setTransport("https://cdn.jsdelivr.net/npm/@mercuryworkshop/epoxy-transport@2.1.28/dist/index.mjs", [{ wisp: wispUrl }]);
+                connectionInitPromise = null;
+                return connectionInstance;
+            })();
+
+            return connectionInitPromise;
         }
 
         async function registerServiceWorker() {
@@ -240,8 +255,10 @@
                     };
 
                     sendConfig();
-                    setTimeout(sendConfig, 500);
-                    setTimeout(sendConfig, 1500);
+                    // Reduced spam: relying on the first sendConfig.
+                    // If reliability is an issue, a single retry is better than spamming.
+                    // setTimeout(sendConfig, 500); 
+
 
                     console.log('Service worker registered for embed');
                 } catch (error) {
