--- a/staticsjv2/index.html
+++ b/staticsjv2/index.html
@@ -5,28 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browser</title>
-    <!-- Dynamic base for about:blank contexts -->
     <script>
-        // Determine the actual base path for this file
         (function () {
             let basePath = '';
             try {
-                // If we're in a normal context (not about:blank), use location
                 if (location.protocol !== 'about:' && location.hostname !== '') {
                     basePath = location.href.substring(0, location.href.lastIndexOf('/') + 1);
                 } else {
-                    // For about:blank, try to get the origin from different sources
-                    // Try 1: Check document.referrer (set when navigating from a page)
                     if (document.referrer && document.referrer.includes('/staticsjv2/')) {
                         const refUrl = new URL(document.referrer);
                         basePath = refUrl.href.substring(0, refUrl.href.lastIndexOf('/') + 1);
                     }
-                    // Try 2: Check window.opener (set when using window.open)
                     if (!basePath && window.opener) {
                         try {
                             const openerHref = window.opener.location.href;
                             if (openerHref && !openerHref.startsWith('about:')) {
-                                // Opener could be index2.html, so navigate to staticsjv2
                                 if (openerHref.includes('/staticsjv2/')) {
                                     basePath = openerHref.substring(0, openerHref.lastIndexOf('/') + 1);
                                 } else {
@@ -35,7 +28,6 @@
                             }
                         } catch (e) { }
                     }
-                    // Try 3: Check window.parent (for iframes)
                     if (!basePath && window.parent !== window) {
                         try {
                             const parentHref = window.parent.location.href;
@@ -62,37 +54,31 @@
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <!-- Load config first (synchronous) -->
-    <script src="../config.js"></script>
-    <script src="../scripts/settings.js"></script>
+    <!-- Load config first -->
+    <script src="../config.js" defer></script>
+    <script src="../scripts/settings.js" defer></script>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/background.css">
     <link rel="stylesheet" href="style.css">
 
-    <!-- Background and notifications (synchronous for immediate availability) -->
-    <script src="../scripts/background.js"></script>
-    <script src="../scripts/notifications.js"></script>
+    <!-- Background (non-blocking) -->
+    <script src="../scripts/background.js" defer></script>
 
     <!-- Scramjet - must load before BareMux for controller -->
-    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js" defer></script>
 
-    <!-- BareMux as module + signal when ready -->
     <script type="module">
         import * as BareMux from "https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs";
         window.BareMux = BareMux;
         window.dispatchEvent(new Event('baremux-ready'));
     </script>
 
-    <!-- Main script loaded after DOM is ready -->
     <script src="./script.js" defer></script>
 </head>
 
 <body>
-    <!-- Home Button -->
-
-
     <div id="app"></div>
 
     <div class="wisp-settings-modal hidden" id="wisp-settings-modal">
