--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Phantom Unblocked</title>
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
 
-    
+
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
@@ -155,6 +155,7 @@
         }
     </style>
     <script src="config.js" defer></script>
+    <script src="scripts/notifications.js" defer></script>
     <script src="scripts/settings.js" defer></script>
     <script src="scripts/background.js" defer></script>
     <script src="scripts/cloaking.js" defer></script>
