--- a/index2.html
+++ b/index2.html
@@ -267,7 +267,7 @@
     <script>
 
 
-        // Featured games
+        // Featured 
         window.addEventListener('DOMContentLoaded', async () => {
             if (!window.FeaturedGames) return;
             await window.FeaturedGames.load();
